# programm

./: CMakeLists.txt  примеры.txt  теория.txt
1/: main.cpp.txt
10 lab/: CMakeLists.txt  main.cpp  phone_utils.cpp  phone_utils.h
2/: main.cpp.txt
3/: main.cpp.txt
4/: lab4.txt
8 lab/: CMakeLists.txt  functions.cpp  functions.h  input.txt  main.cpp  output.txt
8.2/: CMakeLists.txt  input.txt  output.txt
8.2/include/: text_processor.h
8.2/src/: main.cpp  text_processor.cpp
9 lab/: CMakeLists.txt
9 lab/data/: input.txt  output.txt
9 lab/include/: list.h
9 lab/src/: list.cpp  main.cpp
CMakeProject2/: CMakeLists.txt  Rectangle2D.cpp  Rectangle2D.h  main.cpp
CMakeProject2/CMakeProject2/: CMakeLists.txt
LAB 6/: CMakeLists.txt  main.cpp
LAB 6/include/: Rectangle2D.h
LAB 6/src/: Rectangle2D.cpp
lab 5/: CMakeLists.txt  main.cpp
lab 5/include/: money_lib.h
lab 5/src/: money_lib.cpp
lab55/: CMakeLists.txt
lab55/lab55/: CMakeLists.txt  kjk.cpp  lab55.cpp  lab55.h
